All structure to Get All Matches for Layou-1
